--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="intro__inner">
         <div class="header__logo">
-            <img src="/image/logo.svg" alt="">
+            <img src="./image/logo.svg" alt="">
             <h2 class="logo__text">Beauty</h2>
         </div>
         <form class="search__header">
@@ -75,7 +75,7 @@
             <div class="grid-item grid-item-catalog">
                 <div class="bg-white">
                     <div class="thumb">
-                        <img src="/image/Rectangle 4.jpg" alt="Chair">
+                        <img src="./image/Rectangle 4.jpg" alt="Chair">
                     </div>
                     <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
                     <p class="grid-price">9 900 ₽ </p>
@@ -85,7 +85,7 @@
             <div class="grid-item grid-item-catalog">
                 <div class="bg-white">
                     <div class="thumb">
-                        <img src="/image/Rectangle 4.jpg" alt="Chair">
+                        <img src="./image/Rectangle 4.jpg" alt="Chair">
                     </div>
                     <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
                     <p class="grid-price">9 900 ₽ </p>
@@ -95,7 +95,7 @@
             <div class="grid-item grid-item-catalog">
                 <div class="bg-white">
                     <div class="thumb">
-                        <img src="/image/Rectangle 4.jpg" alt="Chair">
+                        <img src="./image/Rectangle 4.jpg" alt="Chair">
                     </div>
                     <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
                     <p class="grid-price">9 900 ₽ </p>
@@ -105,7 +105,7 @@
             <div class="grid-item grid-item-catalog">
                 <div class="bg-white">
                     <div class="thumb">
-                        <img src="/image/Rectangle 4.jpg" alt="Chair">
+                        <img src="./image/Rectangle 4.jpg" alt="Chair">
                     </div>
                     <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
                     <p class="grid-price">9 900 ₽ </p>
@@ -119,7 +119,7 @@
                         <p>Каждый месяц разыгрываем<br>10 000 рублей для наших клиентов</p>
                         <input type="email" placeholder="Введите e-mail">
                     </div>
-                    <img class="bg-green-img" src="/image/Group.svg" alt="Envelope">
+                    <img class="bg-green-img" src="./image/Group.svg" alt="Envelope">
                 </div>
             </div>
             <div class="grid-item grid-item-right">
